--- a/course_material/week_04/pandas_part_2.ipynb
+++ b/course_material/week_04/pandas_part_2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "11                  18  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000016AEA644400>\n"
+      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000016EA373D040>\n"
      ]
     }
    ],
@@ -360,6 +360,99 @@
    ],
    "source": [
     "grouped_vehicles_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Manufacturer</th>\n",
+       "      <th>Owner</th>\n",
+       "      <th>Horsepower</th>\n",
+       "      <th>Torque (lb-ft)</th>\n",
+       "      <th>Fuel Economy (mpg)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vehicle Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Car</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SUV</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Truck</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Manufacturer  Owner  Horsepower  Torque (lb-ft)  \\\n",
+       "Vehicle Type                                                    \n",
+       "Car                      4      4           4               4   \n",
+       "SUV                      4      4           4               4   \n",
+       "Truck                    4      4           4               4   \n",
+       "\n",
+       "              Fuel Economy (mpg)  \n",
+       "Vehicle Type                      \n",
+       "Car                            4  \n",
+       "SUV                            4  \n",
+       "Truck                          4  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vehicles_df.groupby(\"Vehicle Type\").count()"
    ]
   },
   {
@@ -3023,6 +3116,13 @@
    "source": [
     "belize_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
