--- a/course_material/week_18/neural_networks.ipynb
+++ b/course_material/week_18/neural_networks.ipynb
@@ -352,22 +352,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#predictions\n",
     "y_pred = []\n",
     "\n",
-    "with torch.no_grad():\n",
+    "with torch.no_grad(): #decreases memory consumption\n",
     "    for i, data in enumerate(X_test):\n",
     "        prediction = ann(data)\n",
-    "        y_pred.append(prediction.argmax()) "
+    "        y_pred.append(prediction.argmax()) #returns index with max element in each prediction set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
