--- a/course_material/week_20/NLP.ipynb
+++ b/course_material/week_20/NLP.ipynb
@@ -362,12 +362,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'Adventures', 'Wonderland', 'Lewis', 'Carroll', '1865']\n",
+      "['CHAPTER']\n",
+      "['Rabbit', 'Hole']\n",
+      "['Alice', 'beginning', 'get', 'tired', 'sitting', 'sister', 'bank', 'nothing', 'twice', 'peeped', 'book', 'sister', 'reading', 'pictures', 'conversations', 'use', 'book', 'thought', 'Alice', 'without', 'pictures', 'conversation']\n",
+      "['considering', 'mind', 'well', 'could', 'hot', 'day', 'made', 'feel', 'sleepy', 'stupid', 'whether', 'pleasure', 'making', 'daisy', 'chain', 'would', 'worth', 'trouble', 'getting', 'picking', 'daisies', 'suddenly', 'White', 'Rabbit', 'pink', 'eyes', 'ran', 'close']\n",
+      "['nothing', 'remarkable', 'Alice', 'think', 'much', 'way', 'hear', 'Rabbit', 'say', 'Oh', 'dear']\n",
+      "['Oh', 'dear']\n",
+      "['shall', 'late']\n",
+      "['thought', 'afterwards', 'occurred', 'ought', 'wondered', 'time', 'seemed', 'quite', 'natural', 'Rabbit', 'actually', 'TOOK', 'WATCH', 'WAISTCOAT', 'POCKET', 'looked', 'hurried', 'Alice', 'started', 'feet', 'flashed', 'across', 'mind', 'never', 'seen', 'rabbit', 'either', 'waistcoat', 'pocket', 'watch', 'take', 'burning', 'curiosity', 'ran', 'across', 'field', 'fortunately', 'time', 'see', 'pop', 'large', 'rabbit', 'hole', 'hedge']\n",
+      "['another', 'moment', 'went', 'Alice', 'never', 'considering', 'world', 'get']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# take one or two characters that should be eliminated, and write a list comprehension to remove them\n",
+    "for sentence in text_sentences:\n",
+    "    filtered_list = [w for w in sentence if w.lower() not in sw]\n",
+    "    new_filtered_list = [w for w in filtered_list if w.isalnum()]\n",
+    "    print(new_filtered_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stemming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wander'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#stemming - finding root words\n",
+    "# overstemming - when words are over truncated - car vs care in caring. So, car would be overstemming of caring.\n",
+    "# understemming - false negative, so if we convert alumnus to alumnu \n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "stemmer = SnowballStemmer(language='english')\n",
+    "word = 'wander'\n",
+    "stemmer.stem(word)\n",
+    "# fun fact: Google adopted word stemming in 2003. Before this, searching words like \"fish\"\n",
+    "# would not have given results for \"fishing\" or \"fishes\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lemmatization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fishing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lemmatization - finding the form of a word thats related in the dictionary\n",
+    "# the process for calculated lemmas is more complex than stemming\n",
+    "# lemmatization considers the context AND converts the word to \"meaningful base form\" (a lemma)\n",
+    "# a word can have multiple lemmas\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "word = 'fishing'\n",
+    "print(lemmatizer.lemmatize(word))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# take one or two characters that should be eliminated, and write a list comprehension to remove them\n"
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "#nltk.download('vader_lexicon')\n",
+    "analyzer = SentimentIntensityAnalyzer()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = '''\n",
+    "Etymology and naming\n",
+    "The origin of the English word 'cat', Old English catt, is thought to be the Late Latin word cattus, which was first used at the beginning of the 6th century.[20] It was suggested that the word 'cattus' is derived from an Egyptian precursor of Coptic ϣⲁⲩ šau, \"tomcat\", or its feminine form suffixed with -t.[21] The Late Latin word may be derived from another Afro-Asiatic[22] or\n",
+    "Nilo-Saharan language. The Nubian word kaddîska \"wildcat\" and Nobiin kadīs are possible sources or cognates.[23] \n",
+    "The Nubian word may be a loan from Arabic قَطّ‎ qaṭṭ ~ قِطّ qiṭṭ. It is \"equally likely that the forms might derive from an\n",
+    "ancient Germanic word, imported into Latin and thence to Greek and to Syriac and Arabic\".[24] The word may be derived \n",
+    "from Germanic and Northern European languages, and ultimately be borrowed from Uralic, cf. Northern Sami gáđfi, \"female stoat\",\n",
+    "and Hungarian hölgy, \"stoat\"; from Proto-Uralic *käďwä, \"female (of a furred animal)\".[25]\n",
+    "The English puss, extended as pussy and pussycat, is attested from the 16th century and may have been introduced from Dutch\n",
+    "poes or from Low German puuskatte, related to Swedish kattepus, or Norwegian pus, pusekatt. Similar forms exist in Lithuanian\n",
+    "puižė and Irish puisín or puiscín. The etymology of this word is unknown, but it may have simply arisen from a sound used to\n",
+    "attract a cat.[26][27]\n",
+    "A male cat is called a tom or tomcat[28] (or a gib,[29] if neutered). An unspayed female is called a queen,[30] especially\n",
+    "in a cat-breeding context. A juvenile cat is referred to as a kitten. In Early Modern English, the word kitten was\n",
+    "interchangeable with the now-obsolete word catling.[31] A group of cats can be referred to as a clowder or a glaring.[32]\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'neg': 0.006, 'neu': 0.983, 'pos': 0.012, 'compound': 0.4019}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentiments = []\n",
+    "sentiment = analyzer.polarity_scores(text)\n",
+    "print(sentiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'text': '\\nEtymology and naming\\nThe origin of the English word \\'cat\\', Old English catt, is thought to be the Late Latin word cattus, which was first used at the beginning of the 6th century.[20] It was suggested that the word \\'cattus\\' is derived from an Egyptian precursor of Coptic ϣⲁⲩ šau, \"tomcat\", or its feminine form suffixed with -t.[21] The Late Latin word may be derived from another Afro-Asiatic[22] or\\nNilo-Saharan language. The Nubian word kaddîska \"wildcat\" and Nobiin kadīs are possible sources or cognates.[23] \\nThe Nubian word may be a loan from Arabic قَطّ\\u200e qaṭṭ ~ قِطّ qiṭṭ. It is \"equally likely that the forms might derive from an\\nancient Germanic word, imported into Latin and thence to Greek and to Syriac and Arabic\".[24] The word may be derived \\nfrom Germanic and Northern European languages, and ultimately be borrowed from Uralic, cf. Northern Sami gáđfi, \"female stoat\",\\nand Hungarian hölgy, \"stoat\"; from Proto-Uralic *käďwä, \"female (of a furred animal)\".[25]\\nThe English puss, extended as pussy and pussycat, is attested from the 16th century and may have been introduced from Dutch\\npoes or from Low German puuskatte, related to Swedish kattepus, or Norwegian pus, pusekatt. Similar forms exist in Lithuanian\\npuižė and Irish puisín or puiscín. The etymology of this word is unknown, but it may have simply arisen from a sound used to\\nattract a cat.[26][27]\\nA male cat is called a tom or tomcat[28] (or a gib,[29] if neutered). An unspayed female is called a queen,[30] especially\\nin a cat-breeding context. A juvenile cat is referred to as a kitten. In Early Modern English, the word kitten was\\ninterchangeable with the now-obsolete word catling.[31] A group of cats can be referred to as a clowder or a glaring.[32]\\n',\n",
+       "  'compound': 0.4019,\n",
+       "  'positive': 0.012,\n",
+       "  'negative': 0.006,\n",
+       "  'neutral': 0.983}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compound = sentiment[\"compound\"]\n",
+    "pos = sentiment['pos']\n",
+    "neu = sentiment['neu']\n",
+    "neg = sentiment['neg']\n",
+    "\n",
+    "sentiments.append({\n",
+    "            \"text\":text,\n",
+    "            \"compound\":compound,\n",
+    "            \"positive\":pos,\n",
+    "            \"negative\":neg,\n",
+    "            \"neutral\":neu\n",
+    "})\n",
+    "sentiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
