week 22 in class

--- a/course_material/week_22/web_scraping.ipynb
+++ b/course_material/week_22/web_scraping.ipynb
@@ -1703,6 +1703,7 @@
    ],
    "source": [
     "from splinter import Browser\n",
+    "#pip install webdriver-manager\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "\n",
     "executable_path = {'executable_path':ChromeDriverManager().install()}\n",
